fix splash page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body, button, input, select, textarea {
 
 .primlogo {
     width: 200px;
-    height: 70px;
+    height: 65px;
 }
 
 .justify-content-evenly {
